# web_compilaton_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: CustomWorkflow.yml
backend/: db.sqlite3
backend/Registration/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
backend/Registration/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/compile/: DriverCode.py  ExecuteCode.py  MiiddleWare.py  Task.py  admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py  workers.py
backend/compile/migrations/: 0001_initial.py  0002_alter_submission_submission_id.py
backend/media/submissions/: demo1.cpp  demo_4otA1NA.py
backend/media/testcase/: problem__id_2.json  problem_id_1.json  problem_id_3.json
nginx/: Dockerfile  djsite.conf
public_test/: Trappingwater_4.json  Trappingwater_4_pb.json  fact_1.json  fact_1_pb.json  palindrome_2.json  palindrome_2_pb.json  rotate_array3.json  rotate_array3_pb.json
redis-dir/: Dockerfile  redis.conf
